<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dungeon Adventure</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Dungeon Adventure</string>
    <string name="sub">Test Mode :</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="play">P l a y</string>

</resources>
